KAFKA-14484: Move UnifiedLog to storage module